Created the first draft of Tribute Page

--- a/index.html
+++ b/index.html
@@ -3,16 +3,102 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Site Template</title>
+    <title>Tribute to Jean-Michel Basquiat</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" type="text/css">
     <link href="style.css" rel="stylesheet" type="text/css">
   </head>
 
   <!-- https://codepen.io/freeCodeCamp/full/zNqgVx "Reference Site" -->
-  <!-- for my subject I will use a saint -->
+
 
   <body>
+    <main id="main">
+      <header>
+        <h1 id="title">Jean-Michel Basquiat</h1>
+        <p>An American Artist.</p>
+      </header>
+      <figure id="img-div">
+        <img id="image" src="Images/Basquiat.jpg" alt="Photo of Andy Warhol, Jean-Michel Basquiat, Bruno Bischofberger, and Francesco Clemente in 1984. Credit to Galerie Bruno Bischofberger, Own work, CC BY-SA 4.0.">
+        <figcaption id="img-caption">Photo from 1984.<br><a href="#credits">Photo Credits.</a></figcaption>
+      </figure>
+     
+      <section id="tribute-info">
+        <h2>A Quick Gander Through A Gallery of His Life</h2>
+        <ul class="main-list">
+          <li><b>1960's</b>
+            <ul class="inner-list">
+              <li>
+                <b>1960: </b> Born December 22.
+              </li>
+              <li>
+                <b>1964: </b>Already reading and writing. 
+              </li>
+              <li>
+                <b>1967: </b>Began attending Saint Ann's School, an arts-oriented exclusive private school. While there he and a friend created a children's book. Basquiat was the writer, his friend the illustrator. 
+              </li>
+              <li>
+                <b>1968: </b>Parent's separated. He and his sisters went to live with their father.
+              </li>
+            </ul>
+          </li>
+          <li><b>1970's</b>
+            <ul class="inner-list">
+              <li>
+                <b>1970: </b>At age 10, his mother was committed to a psychiatric hospital.
+              </li>
+              <li>
+                <b>1971: </b>By the age of eleven, Basquiat was fully fluent in French, Spanish and English.
+              </li>
+              <li>
+                <b>1977: </b>Due to his mother's instability and family unrest, Basquiat ran away from home at 15, but ended up returning to his Father's house with help from the police a week later. 
+              </li>
+              <li>
+                <b>1978: </b>Basquiat was expelled from his high school for pieing the principal. His father kicked him out and then he dropped out of school.
+                <li>
+            </ul>
+          </li>
+          <li><b>1980's</b>
+            <ul class="inner-list">
+              <li>
+                <b>1981: </b>At 21, Basquiat sold his first painting, Cadillac Moon (1981), to Debbie Harry, lead singer of the punk rock band Blondie, for $200.This year he also became the youngest artist to ever take part in <i>documenta</i> in Kassel. 
+              </li>
+              <li>
+                <b>1982: </b>At 22, he was the youngest to exhibit at the Whitney Biennial in New York; he was the first American one-man show at the Annina Nosei Gallery; he befriended Andy Warhol by painting him <i>Dos Cabezas</i> within 2 hours.
+              </li>
+              <li>
+                <b>1983: </b>He showed up to his show with his girlfriend, the then-unknown singer Madonna.
+              </li>
+              <li>
+                <b>Mid-Eighties: </b>Collaborated with Warhol on a number of pieces; was earning $1.4 million a year and he was receiving lump sums of $40,000 from art dealers; appeared on the cover of The New York Times Magazine; sinking deeper into drug addiciton.
+              </li>
+              <li>
+                <b>1986-1988: </b>Traveled the world making more paintings, selling them in shows, and he even walked the catwalk at a fashion show in Paris.
+              </li>
+              <li>
+                <b>August 12<sup>th</sup>, 1988: </b> Found dead from a heroin overdose.
+              </li>    
+            </ul>
+          </li>
+          <li><b>After His Death</b>
+            <ul class="inner-list">
+              <li>
+                <b>1992: </b>The Whitney Museum of American Art held a retrospective of his art work.
+              </li>
+              <li>
+                <b>2017: </b> Sotheby's auctioned off <i>Untitled</i>, a 1982 painting by Basquiat depicting a black skull with red and yellow rivulets, sold for $110.5 million, becoming one of the most expensive paintings ever purchased.
+              </li>   
+            </ul>
+          </li>
+        </ul>
+      </section>
+      <footer>
+        <p id="credits" class="credits">Photo Credits: By Galerie Bruno Bischofberger - Own work, CC BY-SA 4.0, <a href="https://commons.wikimedia.org/w/index.php?curid=93257945" target="_blank">https://commons.wikimedia.org/w/index.php?curid=93257945</a></p>
+        <p class="credits"><a href="http://basquiat.com/"  class="credits" target="_blank">http://basquiat.com/</a></p>
+        <p class="credits">The source for all of this info: <a id="tribute-link" href="https://en.wikipedia.org/wiki/Jean-Michel_Basquiat"  target="_blank">Basquiat's Wikipedia</a></p>
+      </footer>
 
+    </main>
     <script src="script.js"></script>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
