adjusted main container spacing and adjusted the styling in the footer

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       </section>
       <footer>
         <p id="credits" class="credits">Photo Credits: By Galerie Bruno Bischofberger - Own work, CC BY-SA 4.0, <a href="https://commons.wikimedia.org/w/index.php?curid=93257945" target="_blank">https://commons.wikimedia.org/w/index.php?curid=93257945</a></p>
-        <p class="credits"><a href="http://basquiat.com/"  class="credits" target="_blank">http://basquiat.com/</a></p>
+        <p class="credits">Basquiat's Website: <a href="http://basquiat.com/"  class="credits" target="_blank">http://basquiat.com/</a></p>
         <p class="credits">The source for all of this info: <a id="tribute-link" href="https://en.wikipedia.org/wiki/Jean-Michel_Basquiat"  target="_blank">Basquiat's Wikipedia</a></p>
       </footer>
 
